--- a/website/templates/create-language.html
+++ b/website/templates/create-language.html
@@ -6,25 +6,15 @@
 
 {% block body %}
 <div class="flex">
-	<div class="flex vertical start" x-data="main">
-		{% if tlanguage %}
-			<h1>Edit {{ tlanguage.name }}</h1>
-		{% else %}
-			<h1>Create Language</h1>
-		{% endif %}
-		<form class="interior flex vertical start" method="post">
-			<input name="name" id="name" x-model="name" placeholder="Language Name" {% if tlanguage %} x-init="name=`{{ tlanguage.name }}`" {% endif %}>
-			<textarea name="text" id="text" x-model="text" placeholder="Language Description" {% if tlanguage %} x-init="text=`{{ tlanguage.text }}`" {% endif %}></textarea>
-			{% if tlanguage %}
-				<a><button type="submit">Submit Changes</button></a>
-			{% else %}
-				<a><button type="submit">Create Language!</button></a>
-			{% endif %}
-		</form>
+	<form class="flex vertical start" x-data="main" method="post">
+		<h1>{{ "Edit %s"|format(language.name) if language else "Create a Language" }}</h1>
+		<input name="name" id="name" x-model="name" placeholder="Language Name" {% if language %} x-init="name=`{{ language.name }}`" {% endif %}>
+		<textarea name="text" id="text" x-model="text" placeholder="Language Description" {% if language %} x-init="text=`{{ language.text }}`" {% endif %}></textarea>
 		<h2 x-text="name"></h2>
 		<hr>
 		<div class="usercontent" x-html="convert(text)"></div>
-	</div>
+		<a><button type="submit">{{ "Submit Changes" if language else "Create Language!" }}</button></a>
+	</form>
 </div>
 
 {% endblock %}
