--- a/website/templates/create-ruleset.html
+++ b/website/templates/create-ruleset.html
@@ -6,101 +6,83 @@
 
 {% block body %}
 <div class="flex">
-	<div class="flex vertical start" x-data="main">
-		<!-- title -->
-		{% if ruleset %}
-			<h1>Edit {{ ruleset.name }}</h1>
-		{% else %}
-			<h1>Create a Ruleset</h1>
-		{% endif %}
+<form class="flex vertical start" x-data="main" method="post">
+	<!-- title -->
+	<h1>{{ "Edit \"%s\" Ruleset"|format(ruleset.name) if ruleset else "Create a Ruleset" }}</h1>
 
-		<!-- form -->
-		<form method="POST" class="interior flex vertical start">
-			<!-- ruleset name -->
-			<input type="text" placeholder="Ruleset Name" name="name" id="name" x-model="name" style="width: auto">
+	<!-- ruleset name -->
+	<input type="text" placeholder="Ruleset Name" name="name" id="name" x-model="name" style="width: auto" {% if ruleset %} x-init="name=`{{ ruleset.name }}`" {% endif %}>
+
+	<!-- ruleset identifier -->
+	<input type="text" placeholder="Ruleset Identifier" name="identifier" id="identifier" x-model="identifier" style="width: auto" {% if ruleset %} x-init="identifier=`{{ ruleset.identifier }}`" {% endif %}>
+
+	<!-- ruleset description -->
+	<textarea placeholder="Ruleset description" x-model="text" name="text" id="texy" {% if ruleset %} x-init="text=`{{ruleset.description}}`" {% endif %}></textarea>
+
+	<!-- is the ruleset shareable? -->
+	<div class="interior flex horizontal center">
+		<label for="visibility"><h3 style="width: auto">Ruleset Visibility:</h3></label>
+		<select name="visibility" id="visibility" x-model="visibility" style="width: auto">
+			<option value="0">Private</option>
+			<option value="1">Unlisted</option>
+			<option value="2">Public</option>
 			{% if ruleset %}
-				<template x-init="name=`{{ ruleset.name }}`"></template>
+			<template x-init="visibility={{ ruleset.visibility }}; console.log(visibility)"></template>
 			{% endif %}
-
-			<!-- ruleset identifier -->
-			<input type="text" placeholder="Ruleset Identifier" name="identifier" id="identifier" x-model="identifier" style="width: auto">
-			{% if ruleset %}
-				<template x-init="identifier=`{{ ruleset.identifier }}`"></template>
-			{% endif %}
-
-			<!-- ruleset description -->
-			<textarea placeholder="Ruleset description" x-model="text">
-			</textarea>
-			<input type="hidden" name="text" id="text" x-model="text">
-			{% if ruleset %}
-				<template x-init="text=`{{ ruleset.description }}`"></template>
-			{% endif %}
-
-			<!-- is the ruleset shareable? -->
-			<div class="interior flex horizontal center">
-				<label for="visibility"><h3 style="width: auto">Ruleset Visibility:</h3></label>
-				<select name="visibility" id="visibility" x-model="visibility" style="width: auto">
-					<option value="0">Private</option>
-					<option value="1">Unlisted</option>
-					<option value="2">Public</option>
-					{% if ruleset %}
-					<template x-init="visibility={{ ruleset.visibility }}; console.log(visibility)"></template>
-					{% endif %}
-				</select>
-			</div>
-
-			<!-- template ruleset -->
-			{% if not ruleset %}
-			<div class="interior flex horizontal center">
-				<label for="base"><h3 style="width: auto">Template Ruleset:</h3></label>
-				<select name="base" id="base" style="width: auto" x-model="base">
-					<option value="">N/A</option>
-					{% for ruleset in adminrulesets %}
-					<option value="{{ ruleset.id }}">{{ ruleset.name }}</option>
-					{% endfor %}
-					{% for ruleset in current_user.getForeignRulesets() %}
-					<option value="{{ ruleset.id }}">{{ ruleset.name }}</option>
-					{% endfor %}
-				</select>
-			</div>
-			<div class="flex vertical start mild danger" x-show="checkBase()">
-				<h2>Warning</h2>
-				<p>Creating a ruleset with no template ruleset is not recommended. Without a template ruleset, there will be <em>no information</em> in the ruleset to start with. This can make it very difficult to create a usable set of rules, since there will be no ability scores, skills, items, item types, weapon properties, et cetera to mention in homebrew races, backgrounds, classes, and the like.</p>
-			</div>
-			{% endif %}
-
-			{% if not ruleset %}
-				<template x-if="!checkBase()">
-					<!-- copy ruleset viewers? -->
-					<div class="interior flex horizontal center">
-						<label for="same_viewers"><h3 style="width: auto">Share with the same viewers?</h3></label>
-						<select name="same_viewers" id="same_viewers" x-model="same_viewers" style="width: auto">
-							<option value="True">Yes</option>
-							<option value="False" selected>No</option>
-						</select>
-					</div>
-				</template>
-				<template x-if="!checkBase()">
-					<!-- copy ruleset editors? -->
-					<div class="interior flex horizontal center">
-						<label for="same_editors"><h3 style="width: auto">Share with the same editors?</h3></label>
-						<select name="same_editors" id="same_editors" x-model="same_editors" style="width: auto">
-							<option value="True">Yes</option>
-							<option value="False" selected>No</option>
-						</select>
-					</div>
-				</template>
-			{% endif %}
-
-			<!-- submit button -->
-			<a><button type="submit">Create Ruleset</button></a>
-		</form>
-
-		<!-- Preview -->
-		<h2>Ruleset Description:</h2>
-		<hr>
-		<div class="usercontent" x-html="convert(text)"></div>
+		</select>
 	</div>
+
+	<!-- template ruleset -->
+	{% if not ruleset %}
+	<div class="interior flex horizontal center">
+		<label for="base"><h3 style="width: auto">Template Ruleset:</h3></label>
+		<select name="base" id="base" style="width: auto" x-model="base">
+			<option value="">N/A</option>
+			{% for ruleset in adminrulesets %}
+			<option value="{{ ruleset.id }}">{{ ruleset.name }}</option>
+			{% endfor %}
+			{% for ruleset in current_user.getForeignRulesets() %}
+			<option value="{{ ruleset.id }}">{{ ruleset.name }}</option>
+			{% endfor %}
+		</select>
+	</div>
+	<div class="flex vertical start mild danger" x-show="checkBase()">
+		<h2>Warning</h2>
+		<p>Creating a ruleset with no template ruleset is not recommended. Without a template ruleset, there will be <em>no information</em> in the ruleset to start with. This can make it very difficult to create a usable set of rules, since there will be no ability scores, skills, items, item types, weapon properties, et cetera to mention in homebrew races, backgrounds, classes, and the like.</p>
+	</div>
+	{% endif %}
+
+	{% if not ruleset %}
+		<template x-if="!checkBase()">
+			<!-- copy ruleset viewers? -->
+			<div class="interior flex horizontal center">
+				<label for="same_viewers"><h3 style="width: auto">Share with the same viewers?</h3></label>
+				<select name="same_viewers" id="same_viewers" x-model="same_viewers" style="width: auto">
+					<option value="True">Yes</option>
+					<option value="False" selected>No</option>
+				</select>
+			</div>
+		</template>
+		<template x-if="!checkBase()">
+			<!-- copy ruleset editors? -->
+			<div class="interior flex horizontal center">
+				<label for="same_editors"><h3 style="width: auto">Share with the same editors?</h3></label>
+				<select name="same_editors" id="same_editors" x-model="same_editors" style="width: auto">
+					<option value="True">Yes</option>
+					<option value="False" selected>No</option>
+				</select>
+			</div>
+		</template>
+	{% endif %}
+
+	<!-- Preview -->
+	<h2>Ruleset Description:</h2>
+	<hr>
+	<div class="usercontent" x-html="convert(text)"></div>
+
+	<!-- submit button -->
+	<a><button type="submit">{{ "Submit Changes" if ruleset else "Create Ruleset" }}</button></a>
+</form>
 </div>
 
 {% endblock %}
