--- a/website/templates/master.html
+++ b/website/templates/master.html
@@ -122,5 +122,16 @@
 	<li><a @click="changeRuleset()">Change Rulesets</a></li>
 </form>
 {% block body %}{% endblock %}
+<div class="flex" style="background-color: inherit">
+	<div class="flex horizontal center" style="background-color: inherit">
+		<span class="small">
+			<a href="#">DMCA</a> | 
+			<a href="#">Privacy Policy</a> | 
+			<a href="#">EULA</a> | 
+			<a href="#">CCPA/GDPR</a> | 
+			<a href="#">Terms of Service</a> | 
+			<a href="https://github.com/BlackHat-Magic/Wayfarer" target="_blank">View Source Code</a></span>
+	</div>
+</div>
 </body>
 </html>
