--- a/website/templates/create-action.html
+++ b/website/templates/create-action.html
@@ -9,10 +9,39 @@
 	<form class="flex vertical start" x-data="main" method="post">
 		<h1>{{ "Edit %s"|format(action.name) if action else "Create Action" }}</h1>
 
-		<input name="name" id="name" x-model="name" placeholder="Action Name" {% if action %} x-init="name = `{{ action.name }}`" {% endif %}>
-		<input name="time" id="time" x-model="time" placeholder="How Long Does the Action Take?" {% if action %} x-init="time = `{{ action.time }}`" {% endif %}>
+		<input 
+			name="name" 
+			id="name" 
+			x-model="name" 
+			placeholder="Action Name" 
+			@keyup="writeAction(name, time, text)"
+			{% if action %} 
+				x-init="name = `{{ action.name }}`" 
+			{% else %}
+				x-init="readAction()"
+			{% endif %}
+		>
+		<input 
+			name="time" 
+			id="time" 
+			x-model="time" 
+			placeholder="How Long Does the Action Take?" 
+			@keyup="writeAction(name, time, text)"
+			{% if action %} 
+				x-init="time = `{{ action.time }}`" 
+			{% endif %}
+		>
 
-		<textarea name="text" id="text" x-model="text" placeholder="Action Description" {% if action %} x-init="text = `{{ action.text }}`" {% endif %}></textarea>
+		<textarea 
+			name="text" 
+			id="text" 
+			x-model="text" 
+			placeholder="Action Description" 
+			@keyup="writeAction(name, time, text)"
+			{% if action %} 
+				x-init="text = `{{ action.text }}`" 
+			{% endif %}>
+		</textarea>
 
 		<h2 x-text="name"></h2>
 		<p><strong><em>Time: </em></strong><span x-text="time"></span></p>
